# hsocks

./: .hindent.yaml  README.md  hsocks.cabal  stack.yaml
src/: Main.hs  Proxy.hs  Socks.hs  Types.hs
src/Proxy/: HTTP.hs  Socks.hs  Utils.hs
