name:           hsocks
version:        0.1.0.0
author:         Amir Sabbaghi
maintainer:     asaba90@gmail.com
copyright:      2017 Amir Sabbaghi
build-type:     Simple
cabal-version:  >= 1.10

executable hsocks
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Proxy
               , Types
               , Proxy.Utils
               , Proxy.Socks
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , socket
               , optparse-applicative
               , split
               , bytestring
               , async
               , base64-bytestring
  default-language: Haskell2010
